# soltrade

./: .env.example  .gitignore  README.md  backtest.py  blank_config.json  dockerfile  example.config.json  fetch_historical.py  merx.py  merxbot.py  pyproject.toml  requirements.txt  soltrade.py  test_values.py  trading.py  transactions.py  wallet.py
candlestick/: candlestick.py
merx/: indicators.py  text.py  trading.py  transactions.py  wallet.py
recognition/: fgi.py  rankings.py
soltrade/: config.py  indicators.py  log.py  strategies.py  strategy.py  tg_bot.py  trading.py  transactions.py  utils.py  wallet.py
testing/: backtest.py
