[tool.poetry]
name = "soltrade"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "3.10.1"
backtrader = "1.9.76.123"
base58 = "2.1.1"
httpx = "0.23.3"
matplotlib = "3.2.2"
pandas = "1.5.3"
requests = "2.28.2"
solana = "0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
